# pic_game

./: .gitignore  Cargo.toml  Rocket.toml
.github/workflows/: ci.yaml
database/: core.db
database/migrations/: 20241216143440_core.sql  20241217122357_add_race.sql
src/: database.rs  main.rs  models.rs  routes.rs
static/: index.html
